# meguchi

./: README.md  pyproject.toml  pytest.ini
api/v1/: apps.py
api/v1/migrations/: 0001_initial.py
api/v1/models/: __init__.py  resource.py
api/v1/serializers/: __init__.py  account.py  resource.py
api/v1/tests/models/: test_resource.py
api/v1/views/: __init__.py  account.py  resource.py
config/: settings.py
config/settings/: __init__.py  base.py  local.py  pytest.py
tests/: test_meguchi.py
