[tool.poetry]
name = "meguchi"
version = "0.1.0"
description = "Ogura Megumi"
authors = ["nothink <gakongakon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.8"
black = {version = "*", allow-prereleases = true}
flake8-black = "^0.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
